fix search blur on mobile devices, improve offer

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -59,6 +59,7 @@ nav
   width: 100vw
   height: 100vh
   background: transparentize(#000000, 0.4)
+  z-index: 99
   -webkit-backdrop-filter: blur(40px)
   backdrop-filter: blur(40px)
   #box
@@ -196,14 +197,9 @@ nav
   section, #offer > #box
     flex-direction: column
 
-  section
-    height: 100vh
-
   #offer
     #box
-      gap: 0
-    div
-     transform: scale(.9)
+      transform: scale(.7)
 
   nav
     #box
@@ -217,6 +213,7 @@ nav
 // Smooth scrolling
 html
   scroll-behavior: smooth
+  -webkit-overflow-scrolling: touch
 
 // Lock drag and select
 *
